css/src/_form.css
/**
 * FORMS
 *
 * @format
 */

.form-group {
  margin-bottom: $form-group-margin;
}

.label {
  display: block; /* forces label to appear above the input */
  margin-bottom: $label-margin;
  color: $label-text-color;
  text-transform: uppercase;

  .radio + &,
  .checkbox + & {
    display: inline-block;
    margin-bottom: 0;
  }
}

.input,
.select,
.textarea {
  box-sizing: border-box;
  padding: $input-padding-y $input-padding-x;
  font-size: $input-text-size;
  color: $input-text-color;
  background-color: $input-background-color;
  border: $input-border;
  border-radius: $input-radius;
  outline-offset: $outline-offset;

  &:hover {
    outline: $input-hover-outline;
  }

  &:focus,
  &:active {
    outline: $input-focus-outline;
  }

  &[disabled] {
    color: $input-disabled-text-color;
    background-color: $input-disabled-background-color;
    border: $input-disabled-border;
    outline: none;
  }
}

::placeholder {
  color: $input-placeholder-text-color;

  [disabled]& {
    color: $input-disabled-placeholder-text-color;
  }
}

/* TODO: Create more custom input styles */
/* .radio {} */
/* .checkbox {} */
/* .range {} */

/* Grouped form elements */

/* TODO: Make groups more flexible */
.input-group {
  display: inline-flex;

  & > .button {
    border: $input-border;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    box-shadow: none;
  }

  & > .input {
    margin-right: calc(-1 * $radius);
  }
}

/* Form assistance & validation */

.form-help {
  display: block;
  margin-top: $form-help-margin;
  color: $form-help-text-color;
}

.invalid {
  border: $input-invalid-border;
  outline-color: $input-invalid-color;
}

/* stylelint-disable-next-line a11y/no-display-none */
.invalid-feedback {
  display: none;
  margin-top: $form-help-margin;
  color: $input-invalid-color;

  .invalid + & {
    display: block;
  }
}

